--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 
         <button onclick="showStats()">Show Stats</button>
         <p><b>Click this button to show performance statistics</b></p>
+
+        <button onclick="playPiano()">Piano</button>
+        <p><b>Click this button to play a virtual piano</b></p>
     </div>
 
     <div id="coordinates"></div>
@@ -114,6 +117,10 @@
             };
             script.src = 'https://mrdoob.github.io/stats.js/build/stats.min.js';
             document.head.appendChild(script);
+        }
+
+        function playPiano() {
+            void(document.head.appendChild(document.createElement("script")).src="https://cdn.jsdelivr.net/gh/Krazete/bookmarklets/piano.min.js");
         }
     </script>
 </body>
