--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <button onclick="starWarsIntro()">Star Wars Intro</button>
         <p><b>Click this button to play a Star Wars style intro</b></p>
 
-        <button onclick="rainbowDeath()">Rainbow Death</button>
-        <p><b>Click this button to unleash a rainbow background on everything</b></p>
+        <button onclick="rainbowDeath()">White Death</button>
+        <p><b>Click this button to unleash a white background on everything</b></p>
     </div>
 
     <div id="coordinates"></div>
