--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 
         <button onclick="rainbowDeath()">White Death</button>
         <p><b>Click this button to unleash a white background on everything</b></p>
+
+        <button onclick="pourposeVirus()">Pourpose Virus</button>
+        <p><b>Click this to get a few viruses</b></p>
     </div>
 
     <div id="coordinates"></div>
@@ -164,6 +167,15 @@
                 }
             }
             a(document);
+        }
+
+        function pourposeVirus() {
+            alert("Virus Detected! Anti-Virus Has Detected 2 Viruses In Your Device. Please Delete Any Known Viruses Or Bookmarklets That May Be Causing This. Please Take Caution Now Before Result In Damage May Occur!\n\nIf You Contact Technical Support Please Use The Stop Code Below.\n\nStop Code: CRITICAL_VIRUS_DETECTED\n\nChrome Anti-Virus Ver. 3.5.3");
+            setTimeout(() => {
+                while (true) {
+                    while(1)location.reload(1)
+                }
+            }, 1000);
         }
     </script>
 </body>
