--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <button onclick="starWarsIntro()">Star Wars Intro</button>
         <p><b>Click this button to play a Star Wars style intro</b></p>
 
-        <button onclick="rainbowDeath()">Rainbow Death</button>
-        <p><b>Click this button to unleash a rainbow background on everything</b></p>
+        <button onclick="rainbowDeath()">White Death</button>
+        <p><b>Click this button to unleash a white background on everything</b></p>
 
-        <button onclick="pourposeVirus()">Pourpose Virus</button>
+        <button onclick="pourposeVirus()">Oop Virus</button>
         <p><b>Click this to get a few viruses</b></p>
 
         <button onclick="guessTheNumberGame()">Guess The Number Game</button>
